turtleart.star.Star.scala.error
Compilation error:
Star:1: error: Missing closing brace `}' assumed here
override def run() {
^Star:1: error: expected start of definition
override def run() {
         ^